--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1:hover {
     background-color: blue;
 }
 
-#img:active {
+#img:focus {
     width: 1000px;
     height: 800px;
     filter: blur(0);
